alteraçoes texto planos adicionais carrinho

--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -147,7 +147,7 @@
                     <span class="plan-card-a__checkbox">
                       <input type="checkbox" id="fitCoachCheckbox" class="addon-checkbox" data-addon-name="FIT COACH" data-addon-price="40" onclick="toggleCheckbox(this)">    
                     </span>
-                  <h3 class="plan-card-a__plan-name">FIT COACH</h3>                
+                  <h3 class="plan-card-a__plan-name">ORANGE FIT COACH</h3>                
                 </li>
                 <li class="plan-card-a__col">
                   <p class="plan-card-a__info-preco">R$40/mês</p>
@@ -155,7 +155,7 @@
                 </ul>            
               </div>             
               <div class="addons-card__description">
-                <p class="plan-card-a__description">Escolha seu professor, defina seu objetivo e tenha mais resultados! Tire suas dúvidas e personalize seu treino através de chamadas de vídeo periódicas com um professor especializado. O pacote inclui: 12 consultas + chat(Permanência mínima de doze meses)                
+                <p class="plan-card-a__description">Escolha seu professor, defina seu objetivo e tenha mais resultados! Tire suas dúvidas e personalize seu treino através de chamadas de vídeo periódicas com um professor especializado. O pacote inclui: 12 consultas + chat (Permanência mínima de doze meses)                
                 </p>
               </div>
               </div>  
@@ -170,7 +170,7 @@
                   <span class="plan-card-a__checkbox">
                     <input type="checkbox" id="fitNutriBodyCheckbox" class="addon-checkbox" data-addon-name="FIT NUTRI + FIT BODY" data-addon-price="40" onclick="toggleCheckbox(this)">                
                   </span>
-                  <h3 class="plan-card-a__plan-name">FIT NUTRI + FIT BODY</h3>                
+                  <h3 class="plan-card-a__plan-name">ORANGE FIT NUTRI + ORANGE FIT BODY</h3>                
                 </li>
                 <li class="plan-card-a__col">
                   <p class="plan-card-a__info-preco">R$40/mês</p>
@@ -178,7 +178,7 @@
                 </ul>                
               </div>             
               <div class="addons-card__description">
-                <p class="plan-card-a__description">Potencialize os resultados do seu treino com um pacote anual de bioimpedâncias e consultas online com um nutricionista especializado no seu objetivo! Com Smart Fit Nutri + Smart Fit Body, você tem acesso a 4 consultas com nutri + plano alimentar personalizado + chat exclusivo com o nutricionista + 12 exames de bioimpedância em unidades Smart Fit.             
+                <p class="plan-card-a__description">Potencialize os resultados do seu treino com um pacote anual de bioimpedâncias e consultas online com um nutricionista especializado no seu objetivo! Com Orange Fit Nutri + Orange Fit Body, você tem acesso a 4 consultas com nutri + plano alimentar personalizado + chat exclusivo com o nutricionista + 12 exames de bioimpedância em unidades Orange Fit            
                 </p>
               </div>
               </div>
@@ -193,7 +193,7 @@
                   <span class="plan-card-a__checkbox">
                     <input type="checkbox" id="fitBodyCheckbox" class="addon-checkbox" data-addon-name="FIT BODY" data-addon-price="10" onclick="toggleCheckbox(this)">
                   </span>
-                  <h3 class="plan-card-a__plan-name">FIT BODY</h3>                
+                  <h3 class="plan-card-a__plan-name">ORANGE FIT BODY</h3>                
                 </li>
                 <li class="plan-card-a__col">
                   <p class="plan-card-a__info-preco">R$10/mês</p>
@@ -201,7 +201,7 @@
                 </ul>                
               </div>             
               <div class="addons-card__description">
-                <p class="plan-card-a__description">Acelere seus resultados acompanhando seus níveis de massa magra, gordura corporal e muito mais! Com esse pacote, você faz 12 bioimpedâncias em qualquer unidade que tenha o totem ou a balança do Smart Fit Body, e ainda tem gráficos detalhados de evolução do seu corpo ao longo do tempo. 
+                <p class="plan-card-a__description">Acelere seus resultados acompanhando seus níveis de massa magra, gordura corporal e muito mais! Com esse pacote, você faz 12 bioimpedâncias em qualquer unidade que tenha o totem ou a balança do Orange Fit Body, e ainda tem gráficos detalhados de evolução do seu corpo ao longo do tempo
                 </p>
               </div>
               </div> 
