--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
 
-  <title>Sign Up - Sign In</title>
+  <title>Inscrição - Login</title>
   
 </head>
 <body>
@@ -92,7 +92,7 @@
             </li>
           </ul>      
         </div>
-        <span class="form__span">ou use o e-mail para registrar-se</span>   
+        <span class="form__span">ou use o e-mail para se registrar</span>   
         <label for="username"></label>
         <input          
             type="text" 
