--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -93,10 +93,10 @@
             <label for="nome">Nome:</label>               
             <input type="text" id="nome" name="nome" required minlength="8" placeholder="Digite seu nome (mínimo 8 caracteres)" required>  
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required placeholder="Digite seu email" required>  
+            <input type="email" id="email" name="email" required placeholder="Digite seu e-mail" required>  
             <label for="mensagem">Mensagem:</label>   
-            <input type="text" id="mensagem" placeholder="Digite aqui sua mensagem" required>  
-            <button type="submit" class="button">Enviar Mensagem</button>     
+            <input type="text" id="mensagem" placeholder="Digite aqui a sua mensagem" required>  
+            <button type="submit" class="button">Enviar</button>     
           </form>      
         </section>
      </section> 
