feito:tranformação da pagina de pagamento

--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -223,7 +223,7 @@
               <ul id="cart" class="list-group"></ul>
               <p>Total: <span id="total">R$0</span></p>
               <button class="button" id="checkout">
-                <a href="../pages/pagamentoCartao.html">Finalizar Compra </a>                   
+                <a href="../pages/pagamento.html">Finalizar Compra </a>                   
               </button>
             </div>
           </div>   
