revisão textos página pagamento

--- a/assets/pages/pagamento.html
+++ b/assets/pages/pagamento.html
@@ -60,17 +60,17 @@
   <main>
     <div class="pagamento">
       <div class="pagamento__titel">
-        <h1 class="pagamento__title-title"> Escolha a forma de Pagamento</h1>
+        <h1 class="pagamento__title-title"> Escolha a forma de pagamento</h1>
       </div>
       <div class="pagamento__icon">
         <form id="paymentForm" class="pagamento__form">
           <div class="pagamento__icon-pix" onclick="chargeStyle(this)">
             <input type="radio" name="paymentMethod" value="pix" class="iconPix" >
-            <p class="pagamento__icon-paragrafo">pix</p>
+            <p class="pagamento__icon-paragrafo">Pix</p>
           </div>
           <div class="pagamento__icon-cartao" onclick="chargeStyle(this)">
             <input type="radio" name="paymentMethod" value="cartao"  class="iconCartao" >
-            <p class="pagamento__icon-paragrafo">Cartão de Credito</p>
+            <p class="pagamento__icon-paragrafo">Cartão de Crédito</p>
           </div>
           <div class="pagamento__icon-boleto" onclick="chargeStyle(this)">
             <input type="radio" name="paymentMethod" value="boleto"  class="iconBoleto" >
@@ -83,11 +83,11 @@
           <h2 class="form_subTitie">Pix</h2>          
           <label for="cabranca" class="form__pagamento-label-cobranca">
             <input type="checkbox" name="Endereço de cobrança igual ao do cadastro" id="cobranca">
-            <span class="form__pagamento-span">Edereço de cobança igual ao de cadastro</span>
+            <span class="form__pagamento-span">Endereço de cobrança igual ao de cadastro.</span>
           </label> 
           <label for="cantrato" class="form__pagamento-label-contrato">
             <input type="checkbox" name="Eu aceito o contrato" id="contrato">
-            <span class="form__pagamento-span">Eu aceito o contrato</span> 
+            <span class="form__pagamento-span">Eu aceito o contrato.</span> 
           </label> 
           <div class="form__pagamento-chavePix">
             <div class="form__pagamento-chavePix-chavePix">
@@ -120,7 +120,7 @@
                             <div class="card-holder-name">Nome do cartão</div>
                         </div>
                         <div class="box">
-                            <span>expira</span>
+                            <span>Expira em</span>
                             <div class="expiration">
                                 <span class="exp-month">mm</span>
                                 <span class="exp-year">aa</span>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="flexbox">
                     <div class="inputBox">
-                        <span>expira mês</span>
+                        <span>Expira mês</span>
                         <select name="" id="" class="month-input">
                             <option value="month" selected disabled>mês</option>
                             <option value="01">01</option>
@@ -166,7 +166,7 @@
                         </select>
                     </div>
                     <div class="inputBox">
-                        <span>expira ano</span>
+                        <span>Expira Ano</span>
                         <select name="" id="" class="year-input">
                             <option value="year" selected disabled>ano</option>
                             <option value="2021">2021</option>
@@ -182,7 +182,7 @@
                         </select>
                     </div>
                     <div class="inputBox">
-                        <span>cvv</span>
+                        <span>CVV</span>
                         <input type="text" maxlength="4" class="cvv-input">
                     </div>
                 </div>
@@ -200,11 +200,11 @@
           <h2 class="form_subTitie">Boleto</h2>
           <label for="cabranca" class="form__pagamento-label-cobranca">
             <input type="checkbox" name="Endereço de cobrança igual ao do cadastro" id="cobranca">
-            <span class="form__pagamento-span">Edereço de cobança igual ao de cadastro</span>
+            <span class="form__pagamento-span">Endereço de cobrança igual ao de cadastro.</span>
           </label> 
           <label for="cantrato" class="form__pagamento-label-contrato">
             <input type="checkbox" name="Eu aceito o contrato" id="contrato">
-            <span class="form__pagamento-span">Eu aceito o contrato</span> 
+            <span class="form__pagamento-span">Eu aceito o contrato.</span> 
           </label> 
           <div class="form__pagamento-boleto">
             <div class="form__pagamento-boleto-boleto">
@@ -340,7 +340,7 @@
               <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
           </p>   
           <p class="footerDisclaimer-pg">
-              &copy; 2023 Orange Fitness
+              &copy; 2024 Orange Fitness
           </p>  
     </section>     
   </footer>
