--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -83,9 +83,10 @@
         <button class="button" onclick="addNewClass()">Agendar</button> 
       </div>    
       <div class="schedule" id="schedule"> 
-          <!-- Horários das aulas serão exibidos aqui -->        
-       
-      </div>     
+        <!-- Horários das aulas serão exibidos aqui -->        
+        <div id="no-class-message"></div>
+    </div>
+    
     </div>  
   </main>
   <footer class="footer">
