feito: alteração na CSS e JS da pagina login

--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -171,7 +171,7 @@
         <span class="lnr lnr-eye eye-icon3"></span>
         <a href="#" target="_blank" rel="noopener noreferrer" class="form__link">Esqueceu sua senha?</a>
         <button class="form__button button switch-btn" name="signin">
-          ENTRAR
+         <a href="./carrinho.html" rel="noopener noreferrer"> ENTRAR</a>         
         </button>
       </form>
     </div>
