--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -209,14 +209,16 @@
         <div class="sidebar">
           <div class="sidebar__sumary">
             <h3 class="sidebar__sub"> Detalhe da compra</h3>
-            <button class="button">Cadastro</button>
+            <button class="button">
+              <a href="../pages/loginMembros.html" rel="noopener noreferrer">Cadastro</a>
+            </button>
           </div>
           <div class="plan-card">
             <div class="plan-card-b">
               <h2 class = "plan-card-b__title">Carrinho de Compras</h2>
               <ul id="cart" class="list-group"></ul>
               <p>Total: <span id="total">R$0</span></p>
-              <button class="button" id="checkout">
+              <button class="button botao-finalizar">
                 <a href="../pages/pagamento.html">Finalizar</a>                  
               </button>
             </div>
@@ -346,5 +348,6 @@
     </footer>
     <script src="../JS/header.js"></script>
     <script src="../JS/carrinho.js"></script>
+    <script src="../JS/pagamento.js"></script>
   </body>
 </html>
