feito: Repaginação total

--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -39,15 +39,10 @@
               <a href="./loginMembros.html" title="Cadastre-se">Cadastre-se</a>
             </div>   
           </div>
-          <div class="linkSecundary-button-menu">
-            <a href="./carrinho.html" rel="noopener noreferrer"  >
-              <img src="../images/carrinho-de-compra.png" alt="carinho de compra do site">
-            </a>
-          </div>     
         </div>  
         </div>      
         <div class="menuLinks overlay-content">               
-          <a href="./carrinho.html">Carrinho</a></li>
+          <a href="./carrinho.html">Produtos</a></li>
           <a href="./membros.html">Membros</a></li>
           <a href="./galeria.html">Galeria</a></li>
           <a href="./programas.html">Programas de Treinamento</a>
