acrescimo perguntas frequentes navbar pagina membros

--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -42,6 +42,7 @@
       <a href="./membros.html">Membros</a></li>
       <a href="./galeria.html">Galeria</a></li>
       <a href="./programas.html">Programas de Treinamento</a>
+      <a href="./assets/pages/faq.html"  rel="noopener noreferrer">Perguntas Frequentes</a>
     </div>
   </div>
   <button class="nav-button" onclick="openNav()" title="botão de menu">
