--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -45,9 +45,9 @@
       </div>      
       <div class="menuLinks overlay-content">               
         <a href="./carrinho.html">Produtos</a></li>
-        <a href="./membros.html">Membros</a></li>
         <a href="./galeria.html">Galeria</a></li>
         <a href="./programas.html">Programas de Treinamento</a>
+        <a href="./faq.html"  rel="noopener noreferrer">Perguntas Frequentes</a>
       </div>
     </div>
     <button class="nav-button" onclick="openNav()" title="botão de menu">
