--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -38,8 +38,8 @@
       </div>     
     </div>  
     </div>      
-    <div class="menuLinks overlay-content">               
-      <a href="./membros.html">Membros</a></li>
+    <div class="menuLinks overlay-content">
+      <a href="./carrinho.html">Produtos</a></li>               
       <a href="./galeria.html">Galeria</a></li>
       <a href="./programas.html">Programas de Treinamento</a>
       <a href="./assets/pages/faq.html"  rel="noopener noreferrer">Perguntas Frequentes</a>
