alteracao navbar retirada membros acrescimo pergundas frequentes pagina galeria

--- a/assets/pages/galeria.html
+++ b/assets/pages/galeria.html
@@ -45,9 +45,8 @@
         </div>      
         <div class="menuLinks overlay-content">               
           <a href="./carrinho.html">Produtos</a></li>
-          <a href="./membros.html">Membros</a></li>
-          <a href="./galeria.html">Galeria</a></li>
           <a href="./programas.html">Programas de Treinamento</a>
+          <a href="./faq.html"  rel="noopener noreferrer">Perguntas Frequentes</a>
         </div>
       </div>
       <button class="nav-button" onclick="openNav()" title="botão de menu">
@@ -206,7 +205,7 @@
             <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
         </p>   
         <p class="footerDisclaimer-pg">
-            &copy; 2023 Orange Fitness
+            &copy; 2024 Orange Fitness
         </p>  
   </section>     
     </footer>    
