--- a/assets/pages/faq.html
+++ b/assets/pages/faq.html
@@ -42,7 +42,6 @@
         </div>      
         <div class="menuLinks overlay-content">               
           <a href="./carrinho.html">Produtos</a></li>
-          <a href="./membros.html">Membros</a></li>
           <a href="./galeria.html">Galeria</a></li>
           <a href="./programas.html">Programas de Treinamento</a>
         </div>
@@ -54,10 +53,11 @@
     <main>
       <div class="herder">     
         <img src="../images/faq.jpg" alt="imagem de contato" class="imgFAQ">
-         <h1 class="herderFAQ">Perguntas Frequentes (FAQ)</h1>
+         
        </div> 
       <section class="faq">
         
+        <h2>PERGUNTAS FREQUENTES (FAQ)</h2>
         <h2>Como faço para me inscrever na academia?</h2>
         <p>
           Você pode se inscrever pessoalmente em nossa recepção ou preenchendo o
@@ -81,8 +81,7 @@
         <h2>Quais programas de treinamento estão disponíveis?</h2>
         <p class="faq-pg">
           Oferecemos uma variedade de programas, incluindo musculação, aulas de
-          grupo, ioga, e muito mais. Consulte a seção "Programas e Serviços"
-          para obter mais informações.
+          grupo, ioga, e muito mais. Consulte a seção "Programas de Treinamento" para obter mais informações.
         </p>
       </section>
     </main>
@@ -202,7 +201,7 @@
             <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
         </p>   
         <p class="footerDisclaimer-pg">
-            &copy; 2023 Orange Fitness
+            &copy; 2024 Orange Fitness
         </p>  
   </section>     
     </footer>
