feito: ajustes finais da em relação a pagian de membros

--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -39,7 +39,7 @@
     </div>  
     </div>      
     <div class="menuLinks overlay-content">               
-      <a href="./membros.html">Membros</a></li>
+      <a href="./sobre.html">Quem Somos</a></li>
       <a href="./galeria.html">Galeria</a></li>
       <a href="./programas.html">Programas de Treinamento</a>
     </div>
@@ -101,14 +101,10 @@
        
         <input type="password" id="confirma-senha" name="confirma-senha" class="form__input userPassword" placeholder="Confirmar Senha">
         <span class="lnr lnr-eye eye-icon2"></span>      
-        <p id="confirma-senha-helper" class="helper-text">Mensagem de ajuda</p>
-    
+        <p id="confirma-senha-helper" class="helper-text">Mensagem de ajuda</p>    
         <button
-          class="form__button button switch-btn"
-          type="submit"
-          name="signup"
-        >
-          INSCREVER-SE
+          class="form__button button">
+          <a href="./carrinho.html" target="_blank" rel="noopener noreferrer">INSCREVER-SE</a>          
         </button>
       </form>
     </div>
@@ -158,8 +154,8 @@
         />
         <span class="lnr lnr-eye eye-icon3"></span>
         <a href="#" target="_blank" rel="noopener noreferrer" class="form__link">Esqueceu sua senha?</a>
-        <button class="form__button button switch-btn" name="signin">
-         <a href="./carrinho.html" rel="noopener noreferrer"> ENTRAR</a>         
+        <button class="form__button button switch-btn">
+         <a href="./membros.html" rel="noopener noreferrer"> ENTRAR</a>         
         </button>
       </form>
     </div>
@@ -235,7 +231,7 @@
         <div class="footerLinkPage">
           <h2 class="footerTitler">Planos</h2>
           <ul>
-            <li><a href="./carrinho.html">Matrícula</a></li>
+            <li><a href="./loginMembros.html">Matrícula</a></li>
             <li><a href="./contato.html">Contatos</a></li>
           </ul>
         </div>
