--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -43,7 +43,6 @@
         </div>      
         <div class="menuLinks overlay-content">               
           <a href="./carrinho.html">Produtos</a></li>
-          <a href="./membros.html">Membros</a></li>
           <a href="./galeria.html">Galeria</a></li>
           <a href="./programas.html">Programas de Treinamento</a>
         </div>
@@ -199,7 +198,7 @@
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Planos</h2>
             <ul>
-              <li><a href="./carrinho.html">Matrícula</a></li>
+              <li><a href="./loginMembros.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
               
             </ul>
