--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -39,7 +39,7 @@
         </div>  
         </div>      
         <div class="menuLinks overlay-content">               
-          <a href="./membros.html">Membros</a></li>
+          <a href="./termos.html">Termo de Uso</a></li>
           <a href="./galeria.html">Galeria</a></li>
           <a href="./programas.html">Programas de Treinamento</a>
         </div>
@@ -312,7 +312,7 @@
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Planos</h2>
             <ul>
-              <li><a href="./carrinho.html">Matrícula</a></li>
+              <li><a href="./loginMembros.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
