--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -42,7 +42,7 @@
         </div>      
         <div class="menuLinks overlay-content">               
           <a href="./carrinho.html">Produtos</a></li>
-          <a href="./membros.html">Membros</a></li>
+          <a href="./sobre.html">Quem Somos</a></li>
           <a href="./galeria.html">Galeria</a></li>
           <a href="./programas.html">Programas de Treinamento</a>
         </div>
@@ -173,7 +173,7 @@
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Planos</h2>
             <ul>
-              <li><a href="./carrinho.html">Matrícula</a></li>
+              <li><a href="./loginMembros.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
