--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
   <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js" > </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-MFh2A0N4PWOQU5RVO5iWRE3Lxy2kpxC9FhY6NWeMz7Cg6CJZKGMxcK1MFgVs0lKj3do6XMTtekmEJ/j8n5NVrA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 
   <title>Orange Fitness - Home</title>
 </head>
@@ -70,6 +72,7 @@
     <button class="nav-button" onclick="openNav()" title="botão de menu">
       <i class="fa-solid fa-bars fa-2x"></i>
     </button>
+    
   </nav>
   <header>
     <div class="slider">
