revisão texto pagina index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/3734orangelogo4.ico"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
-
   <link rel="stylesheet" href="./assets/CSS/style.css" />
 
   <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
@@ -26,7 +25,6 @@
         <a href="./assets/pages/blog.html"  rel="noopener noreferrer">Blog</a>
         <a href="./assets/pages/depoimentos.html"  rel="noopener noreferrer">Depoimentos</a>
         <a href="./assets/pages/contato.html"  rel="noopener noreferrer">Contato</a>
-        
       </div>      
       <div class="linkSecundary">    
         <div class="logo">
@@ -69,6 +67,7 @@
         <a href="./assets/pages/faq.html"  rel="noopener noreferrer">Perguntas Frequentes</a>
       </div>
     </div>
+    
     <button class="nav-button" onclick="openNav()" title="botão de menu">
       <i class="fa-solid fa-bars fa-2x"></i>
     </button>
@@ -80,7 +79,7 @@
         <img src="./assets/images/carrosel 1.jpg" alt="sala de musculação da academia" class="slide__background-image">
         <div class="slide__copy">
           <h1>Sejam todos bem-vindos à Orange Fitness</h1>
-          <h2 class="slide__copy-sub1">Nossas Instalações</h2>
+          <h2 class="slide__copy-sub1">Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>          
         </div>        
@@ -89,7 +88,7 @@
         <img src="./assets/images/carroseel 2.jpg" alt="sala das esteira eletricas da academia" class="slide__background-image">
         <div class="slide__copy">
           <h1>Sejam todos bem-vindos à Orange Fitness</h1>
-          <h2 >Nossas Instalações</h2>
+          <h2 >Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>             
         </div>        
@@ -98,7 +97,7 @@
         <img src="./assets/images/carrosel 3.jpg" alt="Sala das biciclestas elçetricas da academia" class="slide__background-image">
         <div class="slide__copy">
           <h1 class="slide__copy-3">Sejam todos bem-vindos à Orange Fitness</h1>
-          <h2>Nossas Instalações</h2>
+          <h2>Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>              
         </div>        
@@ -107,7 +106,7 @@
         <img src="./assets/images/carrosel 5.jpg" alt="sala de exercicios livres da academia" class="slide__background-image">
         <div class="slide__copy"> 
           <h1 class="slide__copy-4">Sejam todos bem-vindos à Orange Fitness</h1>         
-          <h2>Nossas Instalações</h2>
+          <h2>Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>               
         </div>        
@@ -116,7 +115,7 @@
         <img src="./assets/images/carosel 4.jpg" alt="Areas interna da academia" class="slide__background-image">
         <div class="slide__copy">
           <h1 class="slide__copy-5">Sejam todos bem-vindos à Orange Fitness</h1>
-          <h2 class="slide__copy-sub5">Nossas Instalações</h2>
+          <h2 class="slide__copy-sub5">Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>                 
         </div>        
