revisão 2 texto pagina index

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="slide">
         <img src="./assets/images/carrosel 1.jpg" alt="sala de musculação da academia" class="slide__background-image">
         <div class="slide__copy">
-          <h1>Sejam todos bem-vindos à Orange Fitness</h1>
+          <h1>Sejam todos bem-vindos à Orange Fitness!</h1>
           <h2 class="slide__copy-sub1">Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>          
@@ -87,7 +87,7 @@
       <div class="slide">
         <img src="./assets/images/carroseel 2.jpg" alt="sala das esteira eletricas da academia" class="slide__background-image">
         <div class="slide__copy">
-          <h1>Sejam todos bem-vindos à Orange Fitness</h1>
+          <h1>Sejam todos bem-vindos à Orange Fitness!</h1>
           <h2 >Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>             
@@ -96,7 +96,7 @@
       <div class="slide">
         <img src="./assets/images/carrosel 3.jpg" alt="Sala das biciclestas elçetricas da academia" class="slide__background-image">
         <div class="slide__copy">
-          <h1 class="slide__copy-3">Sejam todos bem-vindos à Orange Fitness</h1>
+          <h1 class="slide__copy-3">Sejam todos bem-vindos à Orange Fitness!</h1>
           <h2>Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>              
@@ -105,7 +105,7 @@
       <div class="slide">
         <img src="./assets/images/carrosel 5.jpg" alt="sala de exercicios livres da academia" class="slide__background-image">
         <div class="slide__copy"> 
-          <h1 class="slide__copy-4">Sejam todos bem-vindos à Orange Fitness</h1>         
+          <h1 class="slide__copy-4">Sejam todos bem-vindos à Orange Fitness!</h1>         
           <h2>Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>               
@@ -114,7 +114,7 @@
       <div class="slide">
         <img src="./assets/images/carosel 4.jpg" alt="Areas interna da academia" class="slide__background-image">
         <div class="slide__copy">
-          <h1 class="slide__copy-5">Sejam todos bem-vindos à Orange Fitness</h1>
+          <h1 class="slide__copy-5">Sejam todos bem-vindos à Orange Fitness!</h1>
           <h2 class="slide__copy-sub5">Nossas instalações</h2>
           <h6>A <strong>Orange Fitness</strong> é o lugar perfeito para alcançar seus objetivos de condicionamento físico.</h6> 
           <h6>Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</h6>                 
@@ -252,7 +252,7 @@
     </section>
     <section class="footerDisclaimer">
       <p class="footerDisclaimer-pg">
-          *Consulte as condições promocionais e regulamentos na página:  <a href="./assets/pages/contato.html" > Contatos</a>*
+          *Consulte as condições promocionais e regulamentos na página:<a href="./assets/pages/contato.html" > Contatos</a>*
       </p>              
       <p class="footerDisclaimer-pg">
           <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
