alteração itens navbar

--- a/assets/pages/programas.html
+++ b/assets/pages/programas.html
@@ -40,10 +40,11 @@
           </div>   
         </div>  
         </div>      
-        <div class="menuLinks overlay-content">               
+        <div class="menuLinks overlay-content">
+          <a href="./sobre.html">Quem Somos</a></li>               
           <a href="./carrinho.html">Produtos</a></li>
           <a href="./galeria.html">Galeria</a></li>
-          <a href="./programas.html">Programas de Treinamento</a>
+          <a href="./pages/faq.html">Perguntas Frequentes</a>
         </div>
       </div>
       <button class="nav-button" onclick="openNav()" title="botão de menu">
