feito: ajustes finais

--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -45,8 +45,7 @@
           <a href="./programas.html">Programas de Treinamento</a>
         </div>
       </div>
-      <button class="nav-button" onclick="openNav()" title="botão de menu">
-        <i class="fa-solid fa-bars fa-2x"></i>
+      <button class="nav-button" onclick="openNav()" title="botão de menu">&#9776;
       </button>
     </nav>
     <main>
