--- a/assets/pages/programas.html
+++ b/assets/pages/programas.html
@@ -52,8 +52,7 @@
       </button>
     </nav>
     <main>
-      <h1 class="herderTraining">Programas de Treinamentos</h1>
-      <br><br>
+      <h1 class="herderTraining hederTraining__title">Programas de Treinamentos</h1>
       <section class="cards">
         <div class="flip-container" >
           <div class="flipper" >
